Fix: itens gap

--- a/src/pages/Inicio/Inicio.module.css
+++ b/src/pages/Inicio/Inicio.module.css
@@ -24,7 +24,7 @@
   padding: 15px;
   border-bottom: 1px solid #ddd;
   margin-bottom: 10px;
-  margin-top: 10px; /* Adicionado gap entre os filmes */
+  margin-top: 10px;
 }
 
 .filmeItem h2 {
@@ -48,6 +48,7 @@
   font-size: 1em;
   margin-top: 10px;
   transition: background-color 0.3s;
+  margin-bottom: 40px;
 }
 
 .filmeItem a:hover {
